--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-   <div class="navbar navbar-inverse navbar-fixed-top">
+   <!--<div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
           <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -31,23 +31,20 @@
           </div>
         </div>
       </div>
+    </div>-->
+
+    {{> expose}}
+   
+
+    <div class="controls">
+      {{> controls}}  
     </div>
 
-<div class="expose">
-  <div class="container">
-    <h1>Registration</h1>
-    <p>Sleek, intuitive, and powerful front-end framework for faster and easier web development.</p>
-  </div>
-</div>
 
-<div class="controls">
-  {{> controls}}  
-</div>
-
-<div class="container">
-    {{> mainExplorer}}
-</div>
-    
+    <div class="container" id="main">
+        {{> sidepanel}}
+        {{> mainExplorer}}
+    </div>
     {{> footer}}
 </body>
 
