Fixed sidepanel bug

--- a/client/tpl/controls.tpl.html
+++ b/client/tpl/controls.tpl.html
@@ -5,6 +5,34 @@
         </div>
 
       <div class="btn-group">
+          
+        </div>
+
+      <div class="btn-group">
+          <a class="btn dropdown-toggle btn-mini" data-toggle="dropdown" href="#">
+            <i class="icon-list"></i> Sort
+            <span class="caret"></span>
+          </a>
+          <ul class="dropdown-menu pull-left">
+            <li><a class="" href="#"><i class="icon-list"></i> RSS</a></li>
+            <li><a class="" href="#"><i class="icon-search"></i> Search</a></li>
+            <li><a class="" href="#"><i class="icon-repeat"></i> Reload</a></li>
+          </ul>
+        </div>
+
+      <div class="btn-group">
+      <a class="btn btn-mini">Action</a>
+      <a class="btn dropdown-toggle btn-mini" data-toggle="dropdown">
+        <span class="caret"></span>
+      </a>
+      <ul class="dropdown-menu">
+        <li><a class="" href="#"><i class="icon-list"></i> RSS</a></li>
+        <li><a class="" href="#"><i class="icon-search"></i> Search</a></li>
+        <li><a class="" href="#"><i class="icon-repeat"></i> Reload</a></li>
+      </ul>
+    </div>
+
+      <div class="btn-group">
           <a class="btn btn-mini" href="#"><i class="icon-rss"></i> RSS</a>
           <a class="btn btn-mini" href="#"><i class="icon-search"></i> Search</a>
           <a class="btn btn-mini" href="#"><i class="icon-repeat"></i> Reload</a>
