--- a/client/index.html
+++ b/client/index.html
@@ -10,42 +10,9 @@
 </head>
 
 <body>
-   <!--<div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="brand" href="#">Registration</a>
-          <div class="nav-collapse collapse">
-            <ul class="nav">
-              <li class="active">
-                <a href="#">Home</a>
-              </li>
-              <li class="">
-                <a href="#">Lundalogik</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>-->
 
-    {{> expose}}
-   
+    {{> page}}
 
-    <div class="controls">
-      {{> controls}}  
-    </div>
-
-
-    <div class="container" id="main">
-        {{> sidepanel}}
-        {{> mainExplorer}}
-    </div>
-    {{> footer}}
 </body>
 
 
