--- a/client/tpl/explorer.tpl.html
+++ b/client/tpl/explorer.tpl.html
@@ -1,6 +1,6 @@
 
-<template name="mainExplorer">
-    <table class="table table-hover">
+<template name="explorer">
+    <table id="entity-list" class="table table-hover">
         {{#each entities}}
           {{> entity}}
         {{/each}}
@@ -9,7 +9,7 @@
 </template>
 
 <template name="entity">
-    <tr>
+    <tr class="{{selected}}">
         <td><i class="icon-bar-chart"></i></td><td>{{name}}</td><td></td>
     </tr>
 </template>
