--- a/client/tpl/expose.tpl.html
+++ b/client/tpl/expose.tpl.html
@@ -1,8 +1,8 @@
  <template name="expose">
     <div class="expose">
       <div class="container">
-        <h1><i class="icon-beaker"></i>{{header}}</h1>
-        <p>{{description}}</p>
+        <h1><i class="icon-beaker"></i>{{entity.name}}</h1>
+        <p>{{entity.description}}</p>
       </div>
     </div>
     </template>
